fixed scrolling issue, hidden overflow only enabled when filter button is clicked

--- a/main.css
+++ b/main.css
@@ -3,8 +3,6 @@ body {
     font-size: 16px;
     transition: .5s;
     padding: 16px;
-    overflow: hidden;
-    position: relative;
 }
 
 #searchInput {
